<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/appbar"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_titleHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="Hi, Becca!"
            android:fontFamily="@font/poppins_bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/tv_subHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="What do you want to practice today?"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_squat"
        android:layout_width="370dp"
        android:layout_height="120dp"
        app:cardBackgroundColor="@color/skyblue"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/bttmNav_Main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        app:layout_constraintVertical_bias="0.137">
        
        <ImageView
            android:id="@+id/img_squat"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/icon_squat"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"/>
        
        <TextView
            android:id="@+id/tv_menu_squat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/squat_jump"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="220dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_squat"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/grey"
            android:textColor="@color/skyblue"
            android:text="@string/view_detail"
            android:layout_marginTop="64dp"
            android:layout_marginLeft="230dp"/>
        
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_dumbbell"
        android:layout_width="370dp"
        android:layout_height="120dp"
        app:cardBackgroundColor="@color/skyblue"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/bttmNav_Main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_squat"
        app:layout_constraintVertical_bias="0.096">

        <ImageView
            android:id="@+id/img_dumbbell"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/icon_dumbbell" />

        <TextView
            android:id="@+id/tv_menu_dumbbell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/dumbbell"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dumbbell"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="64dp"
            android:backgroundTint="@color/grey"
            android:text="@string/view_detail"
            android:textColor="@color/skyblue" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_pushup"
        android:layout_width="370dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/skyblue"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/bttmNav_Main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_dumbbell"
        app:layout_constraintVertical_bias="0.146">

        <ImageView
            android:id="@+id/img_pushup"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/icon_pushup" />

        <TextView
            android:id="@+id/tv_menu_pushup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="260dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/push_up"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pushup"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="64dp"
            android:backgroundTint="@color/grey"
            android:text="@string/view_detail"
            android:textColor="@color/skyblue" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bttmNav_Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/skyblue"
        app:itemIconTint="@color/blue"
        app:itemTextColor="@color/white"
        app:menu="@menu/nav_menu"/>
</androidx.constraintlayout.widget.ConstraintLayout>